Corrects order of elements on mobile and adjusts grid gaps

--- a/scss/emory-libraries/patterns/50-organisms/_flow-content-boxes.scss
+++ b/scss/emory-libraries/patterns/50-organisms/_flow-content-boxes.scss
@@ -31,10 +31,16 @@
     // Load structure.
     @extend %organisms-flow-content-boxes;
 
-
     // Load skins.
     @include organisms-flow-content-boxes--theme( $skin );
 
   }
 
+  &-feature {
+    @extend %organisms-flow-content-boxes-feature;
+  }
+
+  &-explorer {
+    @extend %organisms-flow-content-boxes-explorer;
+  }
 }
